# pico-pio-example

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.RP2040.md  README.md  memory.x
.cargo/: config.toml
src/: board.rs  buzzer.rs  core_1.rs  ir_nec_pio.rs  ir_remote.rs  main.rs  main_core1.rs  oled.rs  rgb_led.rs
